--- a/flamingo(P)/package.json
+++ b/flamingo(P)/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.15.2",
     "compress": "^0.99.0",
     "compression": "^1.6.2",
+    "connect-flash": "^0.1.1",
     "ejs": "^2.4.2",
     "express": "^4.14.0",
     "express-session": "^1.14.0",
