--- a/codeLab(P)/package.json
+++ b/codeLab(P)/package.json
@@ -17,8 +17,12 @@
   "author": "Token Lin",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "compression": "^1.6.2",
     "ejs": "^2.5.2",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "method-override": "^2.3.6",
+    "morgan": "^1.7.0"
   },
   "bugs": {
     "url": "https://github.com/warcryDoggie/mwahahaha/issues"
