--- a/codeLab(P)/package.json
+++ b/codeLab(P)/package.json
@@ -21,6 +21,7 @@
     "compression": "^1.6.2",
     "ejs": "^2.5.2",
     "express": "^4.14.0",
+    "express-session": "^1.14.1",
     "method-override": "^2.3.6",
     "morgan": "^1.7.0"
   },
