--- a/Node/package.json
+++ b/Node/package.json
@@ -1,8 +1,92 @@
 {
+  "name": "node",
+  "version": "1.0.0",
+  "description": "## macOS",
+  "main": "hello.js",
   "dependencies": {
-    "axios": "^0.18.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-2": "^6.24.1",
-    "fetch": "^1.1.0"
-  }
+    "ansi-styles": "^4.3.0",
+    "array-union": "^3.0.1",
+    "asynckit": "^0.4.0",
+    "braces": "^3.0.2",
+    "cacheable-lookup": "^6.0.4",
+    "cacheable-request": "^7.0.2",
+    "chalk": "^4.1.2",
+    "clone-response": "^1.0.2",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "combined-stream": "^1.0.8",
+    "decompress-response": "^6.0.0",
+    "defer-to-connect": "^2.0.1",
+    "delayed-stream": "^1.0.0",
+    "dir-glob": "^3.0.1",
+    "duplexer": "^0.1.2",
+    "end-of-stream": "^1.4.4",
+    "event-stream": "^3.3.4",
+    "fast-glob": "^3.2.7",
+    "fastq": "^1.13.0",
+    "fill-range": "^7.0.1",
+    "form-data": "^3.0.1",
+    "form-data-encoder": "^1.7.1",
+    "from": "^0.1.7",
+    "fs-extra": "^10.0.0",
+    "get-stream": "^6.0.1",
+    "glob-parent": "^5.1.2",
+    "globby": "^12.0.2",
+    "got": "^12.0.0",
+    "graceful-fs": "^4.2.8",
+    "has-flag": "^4.0.0",
+    "http-cache-semantics": "^4.1.0",
+    "http2-wrapper": "^2.1.9",
+    "ignore": "^5.1.9",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.3",
+    "is-number": "^7.0.0",
+    "isexe": "^2.0.0",
+    "json-buffer": "^3.0.1",
+    "jsonfile": "^6.1.0",
+    "keyv": "^4.0.4",
+    "lodash": "^4.17.21",
+    "lowercase-keys": "^3.0.0",
+    "map-stream": "^0.1.0",
+    "merge2": "^1.4.1",
+    "micromatch": "^4.0.4",
+    "mime-db": "^1.51.0",
+    "mime-types": "^2.1.34",
+    "mimic-response": "^1.0.1",
+    "minimist": "^1.2.5",
+    "node-fetch": "^2.6.6",
+    "normalize-url": "^6.1.0",
+    "once": "^1.4.0",
+    "p-cancelable": "^3.0.0",
+    "path-type": "^4.0.0",
+    "pause-stream": "^0.0.11",
+    "picomatch": "^2.3.0",
+    "ps-tree": "^1.2.0",
+    "pump": "^3.0.0",
+    "queue-microtask": "^1.2.3",
+    "quick-lru": "^5.1.1",
+    "resolve-alpn": "^1.2.1",
+    "responselike": "^2.0.0",
+    "reusify": "^1.0.4",
+    "run-parallel": "^1.2.0",
+    "slash": "^4.0.0",
+    "split": "^0.3.3",
+    "stream-combiner": "^0.0.4",
+    "supports-color": "^7.2.0",
+    "through": "^2.3.8",
+    "to-regex-range": "^5.0.1",
+    "tr46": "^0.0.3",
+    "universalify": "^2.0.0",
+    "webidl-conversions": "^3.0.1",
+    "whatwg-url": "^5.0.0",
+    "which": "^2.0.2",
+    "wrappy": "^1.0.2",
+    "zx": "^4.2.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
