--- a/Node/package.json
+++ b/Node/package.json
@@ -4,6 +4,7 @@
   "description": "## macOS",
   "main": "hello.js",
   "dependencies": {
+    "fastify": "^3.27.1",
     "zx": "^4.2.0"
   },
   "scripts": {
