--- a/Node/package.json
+++ b/Node/package.json
@@ -8,6 +8,7 @@
     "zx": "^4.2.0"
   },
   "scripts": {
+    "run": "node run.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
